--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/rahatji/palkibd#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "error": "^10.4.0",
     "express": "^4.21.2",
     "http-": "^0.2.0",
